# ib-cli-trading-bot

./: .gitignore  README.md  pyproject.toml
.ipynb_checkpoints/: README-checkpoint.md
src/.ipynb_checkpoints/: utils-checkpoint.py
src/bot/: main.py
src/visualizer/: Home.py
src/visualizer/app/: config.py
src/visualizer/components/: OrdersTable.py  PositionsChart.py  PositionsTable.py  StockChart.py
src/visualizer/helpers/: ib_helpers.py
src/visualizer/pages/: 1_💼_Portfolio.py
