[tool.poetry]
name = "ib-trading"
version = "0.1.0"
description = ""
authors = ["hannah0wang <hannah0ananas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
notebook = "^7.3.2"
ib-insync = "^0.9.86"
ipykernel = "^6.29.5"
streamlit = "^1.41.1"
plotly = "^5.24.1"
lightweight-charts = "^2.1"
streamlit-lightweight-charts = "^0.7.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
